# infinite-skin

./: .env-example  .gitignore  docker-compose.yml
backend/: .env  .env-example  Cargo.toml  Dockerfile
backend/entity/src/: album.rs  album_info.rs  album_series.rs  artist.rs  library.rs  mod.rs  prelude.rs  series.rs  tag.rs  user.rs
backend/migration/src/: lib.rs  m20240518_204639_user_table.rs  m20240518_213309_create_album_related_tables.rs  m20240603_183946_add_tag_table.rs  m20240716_233216_add_rating_column.rs
backend/migrations/: 20230412234226_create_user.up.sql  20230412234645_create_admin_table.down.sql  20230412234645_create_admin_table.up.sql  20230412234717_create_artist_table.down.sql  20230412234717_create_artist_table.up.sql  20230412234731_create_album_related_tables.down.sql  20230412234731_create_album_related_tables.up.sql  20230714220156_add-owner-to-albums.down.sql  20230714220156_add-owner-to-albums.up.sql  20230916030434_add-optional-password.down.sql  20230916030434_add-optional-password.up.sql
backend/migrations/2023-02-09-213328_create_user/: up.sql
backend/src/: main.rs  schema.rs
backend/src/api/: albums.rs  health_checker.rs  images.rs  mod.rs  scan.rs  users.rs
backend/src/api/errors/: mod.rs  server_error.rs  user_error.rs
backend/src/database/: db.rs  mod.rs  schema.rs
backend/src/database/entities/: admin_entity.rs  album_entity.rs  artist_entity.rs  mod.rs  series_entity.rs  user_entity.rs
backend/src/database/models/: album_model.rs  artist_model.rs  library_model.rs  mod.rs  series_model.rs  user_model.rs
backend/src/database/queries/: albums.rs  artists.rs  library.rs  mod.rs  series.rs  users.rs
backend/src/http/: albums.rs  artists.rs  health_check.rs  libraries.rs  mod.rs  users.rs
backend/src/http/dto/: albums.rs  libraries.rs  mod.rs  users.rs
backend/src/interface/http/: albums_controller.rs  artist_controller.rs  mod.rs  (+3 more)
backend/src/service/: albums_service.rs  artist_service.rs  health_check_service.rs  library_service.rs  mod.rs  scan_service.rs  users_service.rs
backend/src/utils/: config.rs  token.rs
(+53 files in other folders)
