[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["mysql"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
uuid = { version = "1.2.2", features = ["v4"] }
