[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "mysql", "macros"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
uuid = { version = "1.2.2", features = ["v4"] }
walkdir = "2.3.3"
